manifests/fehler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: kubermates-namespace
  labels:
    app: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp-container
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: webapp-volume
          mountPath: /usr/share/nginx/html
        - name: nginx-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      - name: php
        image: php:fpm-alpine
        volumeMounts:
        - name: webapp-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: webapp-volume
        configMap:
          name: webapp-configmap
      - name: nginx-volume
        configMap:
          name: nginx-configmap
