manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webapp-network-policy
spec:
  podSelector:
    matchLabels:
      app: webapp
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.156.0.2/20
    - namespaceSelector:
        matchLabels:
          name: kubermates-namespace
